--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cecil.sense">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,13 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Info"
-            android:label="@string/title_activity_info"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".kalender" />
         <activity android:name=".mma" />
-        <activity android:name=".Dagbog"></activity>
+        <activity android:name=".Dagbog" />
+        <activity android:name=".info"></activity>
     </application>
 
 </manifest>
